k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    # - name: nginx-svc-port
    #   protocol: TCP
    - port: 80
      targetPort: 80
